--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ hg19_chromosomes/*
 vntr_data/*
 results/
 docs/_build/doctrees/
-docs/_build/html
+docs/_build/html/
 docs/_build/html/_static
 build
 dist
