--- a/meta.yaml
+++ b/meta.yaml
@@ -1,37 +1,51 @@
-{% set version="1.0.2" %}
-about:
-    home: https://github.com/mehrdadbakhtiari/adVNTR
-    license: BSD 3-Clause
-    summary: A tool for genotyping Variable Number Tandem Repeats (VNTR) from sequence data
+{% set version="1.1.1" %}
+
 package:
-    name: advntr
-    version: {{ version }}
+  name: advntr
+  version: {{ version }}
+
 build:
   number: 0
-  skip: false
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  script:
+    - python -m pip install --no-deps --ignore-installed .
   entry_points:
     - advntr=advntr.__main__:main
+
 source:
-  fn: advntr-{{ version }}.tar.gz
   url: https://github.com/mehrdadbakhtiari/adVNTR/archive/{{ version }}.tar.gz
-  sha256: 2fafdbd0d740bd5ef836c7c199edf40509301f4947d340ba19aca92e504fbc08
+  sha256: bcfe2a900d7a58570d908490b9bff3c1e64fccc96e44f5dda0e36b235725d4b0
+
 requirements:
   build:
+    - {{ compiler('c') }}
+  host:
     - python
+    - pip
     - setuptools
     - cython
+    - numpy
     - scipy
-    - networkx==1.11
+    - networkx ==1.11
     - matplotlib
   run:
     - python
     - cython
+    - {{ pin_compatible('numpy') }}
     - scipy
-    - networkx==1.11
+    - networkx ==1.11
     - joblib
+    - scikit-learn
     - biopython
     - blast
     - muscle
-    - pysam>=0.9.1.4
-    - htslib==1.3
+    - pysam >=0.9.1.4
+    - htslib ==1.3
+
+test:
+  commands:
+    - advntr genotype --help
+
+about:
+  home: https://github.com/mehrdadbakhtiari/adVNTR
+  license: BSD 3-Clause
+  summary: A tool for genotyping Variable Number Tandem Repeats (VNTR) from sequence data
