--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,15 @@ install:
   - conda update -q conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION coveralls
   - source activate test-environment
   - conda config --add channels bioconda
   - conda install --quiet advntr
 
 script: coverage run --source=advntr setup.py test
+
+after_success:
+  - coveralls
 
 branches:
   only:
