--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - conda update -q conda
   - conda info -a
 
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION coveralls
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION coveralls matplotlib
   - source activate test-environment
   - conda config --add channels bioconda
   - conda install --quiet advntr
