--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.pyc
+*.o
 .idea/
 .DS_Store
 ./data/
@@ -13,3 +14,9 @@ build
 dist
 pomegranate/*.c
 pomegranate/*.so
+
+filtering/.project
+filtering/.cproject
+filtering/.settings/
+adVNTR-Filtering
+
